--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,10 @@
           <hr/>
           <br/>
           <div id="loader">
-            <p class="text-center">Loading...</p>
+            <center>
+            <img src="images/laoding.gif">
+            </center>
+            <!-- <p class="text-center">Loading...</p> -->
           </div>
           <div id="content" style="display: none;">
             <table class="table">
@@ -31,6 +34,16 @@
               <tbody id="candidatesResults">
               </tbody>
             </table>
+
+            <form onSubmit="App.castVote(); return false;">
+              <div class="form-group">
+                <label for="candidatesSelect">Select Candidate</label>
+                <select class="form-control" id="candidatesSelect">
+                </select>
+              </div>
+              <button type="submit" class="btn btn-primary">Vote</button>
+              <hr />
+            </form>
             <hr/>
             <p id="accountAddress" class="text-center"></p>
           </div>
